--- a/_portfolio/20200310.md
+++ b/_portfolio/20200310.md
@@ -1,25 +1,22 @@
 ---
 cover: /img/portfolio/20160824.jpg
-caption: Обследование кровельного покрытия из мембраны Trokal-SGmA 1,5 мм.
+caption: Обследование кровельного покрытия
 description: Причины обследования протечка внутри помещения..
 title: Обследование кровельного покрытия из мембраны Trokal-SGmA 1,5 мм.
 ---
 
-
 ![](/img/portfolio/20200310.png){:class="uk-align-left uk-width-1-2"}
  
-###### отменяет действие align-left и align-right
 
-
-### **Отчет по результатам проведенной работы: ** {: .uk-text-center}
-**на комплекс работ по обследованию кровельного покрытия из мембраны Trokal-SGmA 1,5 мм.
-{: .uk-text-center} Объект расположен по адресу: г. Москва.
-{: .uk-text-center} Шифр проекта: 20200310.**	
+### **Отчет по результатам проведенной работы: ** 
+**на комплекс работ по обследованию кровельного покрытия из мембраны Trokal-SGmA 1,5 мм.  
+Объект расположен по адресу: г. Москва.  
+Шифр проекта: 20200310.**	
 
 #### **Причины обследования:** протечка внутри помещения.
 **Цель обследования:** качественная оценка технического состояния кровли и кровельного покрытия; поиск дефектов гидроизоляционного слоя. При проведении обследования был применен метод неразрушающего контроля: визуально оптический, согласно ГОСТ 18353-79, контроль неразрушающий.
 
-### **Техническое задание.** {: .uk-text-center}
+### **Техническое задание.**{: .uk-text-center}
 1.	Визуальное обследование кровельного покрытия здания, 440 м2.
 2.	Составить техническое заключение по итогам проведенного обследования.
 
