--- a/_portfolio/20200123.md
+++ b/_portfolio/20200123.md
@@ -1,1 +1,122 @@
-1
+---
+cover: /img/portfolio/20200123.png
+caption: Обследование кровельного покрытия
+description: Причины обследования протечка внутри помещения
+title: Обследование кровельного покрытия
+---
+
+![](/img/portfolio/20200123.1.png){:class="uk-align-left uk-width-1-2"}
+
+ 
+
+### **Отчет по результатам проведенной работы:**
+**на комплекс работ по обследованию кровельного покрытия.  
+Объект расположен по адресу: Московская область, г. Пушкино.  
+Шифр проекта: 20200123.**	
+
+#### **Инженерно-техническое обследование кровельного покрытия здания.**
+#### **Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега по периметру кровельного свеса.  
+**Цель обследования:** Качественная оценка технического состояния конструкции кровли и кровельного покрытия; поиск дефектов гидроизоляционного слоя.
+###### отменяет действие align-left и align-right
+
+
+### **Техническое задание.**
+1.	Визуальное обследование кровельного покрытия здания, 870 м2.  
+2.	Составить техническое заключение по итогам проведенного обследования.  
+***Визуальное обследование – сплошное визуальное обследование конструкций кровли и выявление дефектов и повреждений по внешним признакам с необходимыми замерами и их фиксация.***
+
+#### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**
+1.	Организация безопастного доступа к месту проведения обследования.  
+2.	Визуальный осмотр кровли административно-производственного здания.   
+3.	Визуальный осмотр чердачного помещения.  
+4.	Сбор данных.  
+5.	Анализ полученных результатов обследования.  
+6.	Составление технического заключения.  
+
+#### **При визуальном обследовании, были произведены работы в объёме достаточном для выявления нарушений и причин возникновения протечек.**
+- Была изучена проектная документация.  
+- Составлен ситуационный план кровли и уклоны крыши.  
+- Были зафиксированы и проанализированы все нарушения.  
+
+ #### **Существующий кровельный пирог:**
+![](/img/portfolio/20200123/2020123.2.jpg){:class="uk-align-left uk-width-1-3"}
+
+ 
+###### отменяет действие align-left и align-right
+
+#### **Размеры и уклоны крыши:**
+
+![](/img/portfolio/20200123/2020123.3.jpg){:class="uk-align-left uk-width-1-3"}
+
+ 
+###### отменяет действие align-left и align-right
+
+#### **1. Уклоны кровельных скатов** 
+![](/img/portfolio/20200123/2020123.4.jpg){:class="uk-align-left uk-width-1-3"}
+
+ 
+**Комментарий:**   
+СП 17.13330.2017 Кровли, табл. 4.1 - ***Частично не соответствует***
+###### отменяет действие align-left и align-right
+
+#### **2. Водоотвод**
+![](/img/portfolio/20200123/2020123.5.png){:class="uk-align-left uk-width-1-3"}
+
+ 
+**Комментарий:**   
+СП 17.13330.2017 - ***Не соответствует***  
+Водоотвод осуществляется в наружный водосборный желоб, водоотведение через водосточные трубы Д140 мм. Частично отсутствуют водосборный желоб и водосточные трубы.
+###### отменяет действие align-left и align-right
+
+#### **3. Вентиляция кровли**
+![](/img/portfolio/20200123/2020123.6.png){:class="uk-align-left uk-width-1-2"}
+
+ 
+**Комментарий:**   
+СП 17.13330.2017 п. 4.5 - ***Не соответствует***  
+Отсутствует вентиляция подкровельного пространства: отсутствие вент. каналов на карнизных участках, на коньке кровли, что препятствует выведению конденсата и приводит к его избыточному накоплению в подкровельном пространстве.
+###### отменяет действие align-left и align-right
+
+#### **4. Отсутствие герметичных примыканий кровли к вертикальным поверхностям**
+СП 17.13330.2017 п. 7.2. - ***Не соответствует***  
+Отсутствие эластичных герметизирующих составов.  
+#### **5. Целостность кровельного полотна**
+![](/img/portfolio/20200123/2020123.7.png){:class="uk-align-left uk-width-1-3"}
+
+ 
+СП 17.13330.2017 - ***Не соответствует***
+Целостность кровельного покрытия нарушена вследствие пробития гвоздями для закрепления ремонтных материалов.
+###### отменяет действие align-left и align-right
+#### **6. Защитное ограждение на кровле**
+![](/img/portfolio/20200123/2020123.8.png){:class="uk-align-left uk-width-1-3"}
+
+СП 56.13330.2011 п. 5.3.3 - ***Отсутствует***  
+###### отменяет действие align-left и align-right
+#### **7. Элементы для крепления страховочного троса**
+![](/img/portfolio/20200123/2020123.9.png){:class="uk-align-left uk-width-1-3"}
+ 
+СП 17.13330.2017 п. 4.8 – **Соответствует**  
+###### отменяет действие align-left и align-right
+#### **8. Шаг стропильных ног 1300-1500 мм.**
+![](/img/portfolio/20200123/2020123.91.png){:class="uk-align-left uk-width-1-3"}
+ 
+СП 17.13330.2017 - **Соответствует**  
+###### отменяет действие align-left и align-right
+#### **9. Шаг обрешетки 300 – 400 мм, доска обрешетки необрезная 25 мм.**
+![](/img/portfolio/20200123/2020123.92.png){:class="uk-align-left uk-width-1-3"}
+ 
+СП 17.13330.2017 - **Соответствует**  
+###### отменяет действие align-left и align-right
+#### **10. Карнизный свес**
+![](/img/portfolio/20200123/2020123.93.png){:class="uk-align-left uk-width-1-3"}
+ 
+СП 17.13330.2017 3.1.11 - ***Не соответствует***  
+Конструкция карнизного свеса не защищает стены от дождевой или талой воды.
+###### отменяет действие align-left и align-right
+
+#### **По результатам проведенного обследования: **
+- было составлено техническое заключение.   
+- были разработаны и даны рекомендации по их устранению.  
+- была составлена дефектная ведомость с объемом работ по ремонту кровли.
+
+
