--- a/1.0_survey.md
+++ b/1.0_survey.md
@@ -4,6 +4,7 @@ cat: 1
 main: true
 sortid: 1.0
 submenu: true
+layout: category
 ---
 
 __Высотное обследование__ – форма контроля, получение необходимой информации на высоте и в труднодоступных местах. 
