--- a/_portfolio/20160817.md
+++ b/_portfolio/20160817.md
@@ -1,37 +1,50 @@
 ---
 cover: /img/portfolio/20160817.jpg
 caption: Обследование межпанельных швов
-description: определение объёма работ по герметизации
+description: Определение объёма работ по герметизации
 title: Обследование межпанельных швов
 ---
 
+![](/img/portfolio/20160817/20160817.png){:class="uk-align-left uk-width-1-3"}
+ 
+### **Отчет по результатам проведенной работы:**
+**на комплекс работ по обследованию межпанельных швов.  
+Объект расположен по адресу: Москва   
+Шифр проекта: 20160817.**	
 
-Отчет по результатам проведенной работы:
-на комплекс работ по обследованию межпанельных швов.
- Объект расположен по адресу: Москва 
-Шифр проекта: 20160817.	
+#### **Причины обследования: Разрушение старого герметика, определение объёма работ по герметизации**
 
-Причины обследования: Разрушение старого герметика, определение объёма работ по герметизации.
-
-Техническое задание.
-1.	Обследование межпанельные швы на фасаде здания.
+###### отменяет действие align-left и align-right
+### **Техническое задание**  
+1.	Обследование межпанельные швы на фасаде здания.  
 2.	Составление отчета об обследовании с указанием объема и мест ремонта (герметизации) межпанельных (межплиточных) швов.
 
-ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
-1.	Организация безопастного доступа к месту проведения обследования.
-2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.
-3.	Сбор данных.
-4.	Анализ полученных результатов визуального обследования.
-5.	Составление отчета.
-Фото 
+#### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**  
+1.	Организация безопастного доступа к месту проведения обследования.  
+2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.  
+3.	Сбор данных.  
+4.	Анализ полученных результатов визуального обследования.  
+5.	Составление отчета.  
+
+#### **По результатам обследования здания, на предмет выявления мест повреждения (разрушения) герметичного соединения межпанельных (межплиточных) швов, была составлена дефектная ведомость.**
+![](/img/portfolio/20160817/20160817.1.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20160817/20160817.2.png){:class="uk-align-left uk-width-1-3"}
+###### отменяет действие align-left и align-right
+![](/img/portfolio/20160817/20160817.3.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20160817/20160817.4.png){:class="uk-align-left uk-width-1-3"}
+
+   
+
     
+###### отменяет действие align-left и align-right
+#### **Так должны выглядеть отремонтированные швы:**
+![](/img/portfolio/20160817/20160817.5.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20160817/20160817.6.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20160817/20160817.7.png){:class="uk-align-left uk-width-1-2"}
 
-При визуальном обследовании здания, на предмет выявления мест повреждения (разрушения) герметичного соединения межпанельных (межплиточных) швов, была составлена дефектная ведомость по результатам обследования.
-
-    
- 
-
-Так должны выглядеть новые швы:
     
  
+###### отменяет действие align-left и align-right
+
+
 
