--- a/_portfolio/20140530.md
+++ b/_portfolio/20140530.md
@@ -1,7 +1,7 @@
 ---
 cover: /img/portfolio/20140530.jpg
 caption: Обследование остекления перехода
-description: Причины обследования нарушение гидроизоляции алюминиевой витражной конструкции перехода. 
+description: Причины обследования нарушение гидроизоляции алюминиевой витражной конструкции перехода 
 title: Обследование остекления перехода
 ---
 
