--- a/_portfolio/20200310.md
+++ b/_portfolio/20200310.md
@@ -1,7 +1,7 @@
 ---
 cover: /img/portfolio/20200310.png
 caption: Обследование кровельного покрытия
-description: Причины обследования протечка внутри помещения..
+description: Причины обследования протечка внутри помещения
 title: Обследование кровельного покрытия из мембраны Trokal-SGmA 1,5 мм.
 ---
 
