--- a/_portfolio/20151202.md
+++ b/_portfolio/20151202.md
@@ -1,83 +1,103 @@
 ---
-cover: /img/portfolio/20151202.jpg
-caption: Обследованию временного кровельного покрытия
-description: Обследование кровли проводится по причине возникновения протечек
-title: Обследованию временного кровельного покрытия
+cover: /img/portfolio/20151202.png
+caption: Обследование временного кровельного покрытия
+description: Оценка технического состояния конструкции кровли и временного кровельного покрытия
+title: Обследование временного кровельного покрытия
 ---
 
+![](/img/portfolio/20151202.png){:class="uk-align-left uk-width-1-2"}
 
+### **Отчет по результатам проведенной работы:**  
+**на комплекс работ по обследованию временного кровельного покрытия.  
+Объект расположен по адресу: г. Москва.  
+Шифр проекта: 20151202.**  	
 
-Отчет по результатам проведенной работы:
-на комплекс работ по обследованию временного кровельного покрытия.
-Объект расположен по адресу: г. Москва.
-Шифр проекта: 20151202.	
+#### **Инженерно-техническое обследование временного кровельного покрытия здания.**
+#### **Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега.
+#### **Цель обследования:** Качественная оценка технического состояния конструкции кровли и временного кровельного покрытия.
+###### отменяет действие align-left и align-right
 
-Инженерно-техническое обследование временного кровельного покрытия здания.  
-**Причина обследования:** Обследование кровли проводится по причине возникновения протечек, зафиксированных внутри помещений во время дождей и таяния снега.  
-**Цель обследования:** Качественная оценка технического состояния конструкции кровли и временного кровельного покрытия.
+### **Техническое задание**  
+1.	Визуальное обследование временного кровельного покрытия здания, 870 м2.  
+2.	Визуально обследовать чердачное помещение, конструкцию кровли.  
+3.	Составить техническое заключение по итогам проведенного обследования, в которую должны войти:  
+- Рекомендации  
+- Дефектная ведомость   
+***Визуальное обследование – сплошное визуальное обследование конструкций кровли и выявление дефектов и повреждений по внешним признакам с необходимыми замерами и их фиксация.***
 
-Техническое задание.
-1.	Визуальное обследование временного кровельного покрытия здания, 870 м2.
-2.	Визуально обследовать чердачное помещение, конструкцию кровли.
-3.	Составить техническое заключение по итогам проведенного обследования, в которую должны войти:
-- Рекомендации
-- Дефектная ведомость 
-*Визуальное обследование – сплошное визуальное обследование конструкций кровли и выявление дефектов и повреждений по внешним признакам с необходимыми замерами и их фиксация.
+#### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**  
+1.	Организация безопастного доступа к месту проведения обследования.  
+2.	Визуальный осмотр кровли здания.   
+3.	Визуальный осмотр чердачного помещения.  
+4.	Сбор данных.  
+5.	Анализ полученных результатов обследования.  
+6.	Составление технического заключения.  
 
-ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
-1.	Организация безопастного доступа к месту проведения обследования.
-2.	Визуальный осмотр кровли здания. 
-3.	Визуальный осмотр чердачного помещения.
-4.	Сбор данных.
-5.	Анализ полученных результатов обследования.
-6.	Составление технического заключения.
-Фото 
-  
- 
-При визуальном обследовании, были выявлены и зафиксированы следующие нарушения: 
-Фото
+#### **При визуальном обследовании, были выявлены и зафиксированы следующие нарушения:**
+![](/img/portfolio/20151202/20151202.1.png){:class="uk-align-left uk-width-1-2"}
      
-Большое количество разбросанного строительного мусора, пиломатериалов, арматуры
+**Комментарий:**   
+- Большое количество разбросанного строительного мусора, пиломатериалов, арматуры
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.2.png){:class="uk-align-left uk-width-1-2"}
     
+**Комментарий:**   
+- Временное гидроизоляционное покрытие (тент) имеет многочисленные порезы, проколы, структурные разрушения по всей площади.
+###### отменяет действие align-left и align-right
 
-Временное гидроизоляционное покрытие (тент) имеет многочисленные порезы, проколы, структурные разрушения по всей площади.
-
-Фото
+![](/img/portfolio/20151202/20151202.3.png){:class="uk-align-left uk-width-1-2"}
  
-Тестовое покрытие не прикреплено по периметру к основанию и в местах стыковок.
+**Комментарий:**   
+- Тестовое покрытие не прикреплено по периметру к основанию и в местах стыковок.
+###### отменяет действие align-left и align-right
 
- 
-Фото
+![](/img/portfolio/20151202/20151202.4.png){:class="uk-align-left uk-width-1-2"}
     
-Тентовое покрытие отсутствует на парапете торца здания.
+**Комментарий:**   
+- Тентовое покрытие отсутствует на парапете торца здания.
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.4.png){:class="uk-align-left uk-width-1-2"}
  
-Гидроизоляционное покрытие уложено на стропильную систему, покрытую фанерой толщиной 6 мм.
+**Комментарий:**   
+- Гидроизоляционное покрытие уложено на стропильную систему, покрытую фанерой толщиной 6 мм.
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.5.png){:class="uk-align-left uk-width-1-2"}
  
-Стропильная система выполнена из бруса 40х150 мм. Выявлено частичное проседание стропил. 4 штуки требуют частичной замены или установки дополнительных опор.
- 
-Фото
- 
-Бетонное основание и парапет выполнены из товарного бетона. Толщину бетонного перекрытия определить при визуальном осмотре не удалось. Перекрытие защищено гидроизоляционным слоем из битумного наплавляемого материала. 50% перекрытия утеплено минеральным утеплителем толщиной 50 мм.
+**Комментарий:**   
+- Стропильная система выполнена из бруса 40х150 мм. Выявлено частичное проседание стропил. 4 штуки требуют частичной замены или установки дополнительных опор.
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.6.png){:class="uk-align-left uk-width-1-2"}
  
-В парапетах смонтированы металлические трубы диаметром 40 мм для отвода воды.
+**Комментарий:**   
+- Перекрытие защищено гидроизоляционным слоем из битумного наплавляемого материала. 50% перекрытия утеплено минеральным утеплителем толщиной 50 мм.
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.7.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- В парапетах смонтированы металлические трубы диаметром 40 мм для отвода воды.
+###### отменяет действие align-left и align-right
+
+![](/img/portfolio/20151202/20151202.8.png){:class="uk-align-left uk-width-1-4"}
+![](/img/portfolio/20151202/20151202.9.png){:class="uk-align-left uk-width-1-4"}
+![](/img/portfolio/20151202/20151202.91.png){:class="uk-align-left uk-width-1-4"}
      
-При осмотре подкровельного пространства были выявлены многочисленные следы протечек.
+###### отменяет действие align-left и align-right
+**Комментарий:**   
+- При осмотре подкровельного пространства были выявлены многочисленные следы протечек.
+###### отменяет действие align-left и align-right
 
-Фото
+![](/img/portfolio/20151202/20151202.92.png){:class="uk-align-left uk-width-1-4"}
  
-Фановые трубы заглушены гидроизоляционным материалом, не имеют продуха для нормального функционирования.
+**Комментарий:**   
+- Фановые трубы заглушены гидроизоляционным материалом, не имеют продуха для нормального функционирования.
+###### отменяет действие align-left и align-right
 
-По результатам проведенного обследования: 
-- было составлено техническое заключение. 
-- были разработаны и даны рекомендации по их устранению.
-- была составлена дефектная ведомость с объемом работ по ремонту кровли.
+#### **По результатам проведенного обследования:**   
+- было составлено техническое заключение     
+- были разработаны и даны рекомендации по их устранению    
+- была составлена дефектная ведомость с объемом работ по ремонту кровли    
