--- a/_portfolio/20140530.md
+++ b/_portfolio/20140530.md
@@ -1,26 +1,147 @@
 ---
-cover: /img/portfolio/20140530.jpg
+cover: /img/portfolio/20140530.png
 caption: Обследование остекления перехода
-description: Причины обследования нарушение гидроизоляции алюминиевой витражной конструкции перехода 
-title: Обследование остекления перехода
+description: Причины обследования нарушение гидроизоляции алюминиевой витражной конструкции перехода
+title: Обследование остекления перехода и конструкций
 ---
 
-Отчет по результатам проведенной работы:
-на комплекс работ по обследованию остекления перехода и конструкций.
-Объект расположен по адресу: Москва 
-Шифр проекта: 20140530.	
+![](/img/portfolio/20140530/20140530.1.png){:class="uk-align-left uk-width-1-2"}
 
-Причины обследования: нарушение гидроизоляции алюминиевой витражной конструкции перехода. 
-Цель обследования: осмотр остекления и конструкций перехода для выявления причин протечек и разрушений.
+### **Отчет по результатам проведенной работы:**  
+**на комплекс работ по обследованию остекления перехода и конструкций.  
+Объект расположен по адресу: Москва   
+Шифр проекта: 20140530**	
 
-Техническое задание.
-1.	Обследование остекления и конструкций перехода.
-2.	Составить техническое заключение по итогам проведенного обследования.
+#### **Причины обследования:** нарушение гидроизоляции алюминиевой витражной конструкции перехода. 
+**Цель обследования:** осмотр остекления и конструкций перехода для выявления причин протечек и разрушений.
+###### отменяет действие align-left и align-right
 
-ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
-1.	Организация безопастного доступа к месту проведения обследования.
-2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.
-3.	Сбор данных.
-4.	Анализ полученных результатов визуального обследования.
-5.	Составление заключения.
-Фото 
+### **Техническое задание**  
+1.	Обследование остекления и конструкций перехода.  
+2.	Составить техническое заключение по итогам проведенного обследования.  
+
+***Визуальное обследование – сплошное визуальное обследование конструкций перехода, выявление дефектов и повреждений по внешним признакам с необходимыми замерами и их фиксация.***
+#### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**  
+1.	Организация безопастного доступа к месту проведения обследования.  
+2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест.  
+3.	Сбор данных.  
+4.	Анализ полученных результатов визуального обследования.  
+5.	Составление заключения.  
+
+#### **При визуальном обследовании, были произведены работы в объёме достаточном для выявления нарушений и причин возникновения протечек.**
+
+![](/img/portfolio/20140530/20140530.2.png){:class="uk-align-left uk-width-1-2"}
+
+- Была изучена проектная документация.  
+- Были зафиксированы и проанализированы все нарушения.  
+- Была составлена дефектная ведомость.  
+###### отменяет действие align-left и align-right
+
+#### **1. Алюминиевые витражи**
+![](/img/portfolio/20140530/20140530.3.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- Не плотное прилегание резиновых уплотнителей прижимной планки.  
+- Потеря герметизирующих свойств резиновых уплотнителей (усыхание).  
+###### отменяет действие align-left и align-right
+
+#### **2. Алюминиевые витражи**
+![](/img/portfolio/20140530/20140530.4.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- Отсутствие необходимых технологических зазоров для стока воды.  
+- Нарушение технологии монтажа.  
+###### отменяет действие align-left и align-right
+
+#### **3. Алюминиевые витражи**
+![](/img/portfolio/20140530/20140530.5.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- Отслоение герметизирующих составов.  	 
+- Атмосферные осадки.   
+- Применение материалов, не соответствующих техническому регламенту, температурные колебания.  
+###### отменяет действие align-left и align-right
+
+#### **4. Цементно-песчаная штукатурка стен перехода**
+![](/img/portfolio/20140530/20140530.6.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.7.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.8.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.9.png){:class="uk-align-left uk-width-1-3"}
+  
+###### отменяет действие align-left и align-right
+**Комментарий:**   
+- Локальное разрушение штукатурного слоя.  
+- Атмосферные осадки, отсутствие штукатурной сетки в следствие протечек витражных конструкций перехода.  
+###### отменяет действие align-left и align-right
+
+#### **5. Нижняя наружная часть перехода**
+![](/img/portfolio/20140530/20140530.91.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.92.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.93.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- Частичное разрушение декоративного софита.  
+- Утеря несущей способности крепежа в результате атмосферных осадков.  
+###### отменяет действие align-left и align-right
+
+#### **6. Внутренняя часть перехода**
+![](/img/portfolio/20140530/20140530.94.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20140530/20140530.95.png){:class="uk-align-left uk-width-1-4"}
+  
+###### отменяет действие align-left и align-right
+**Комментарий:**   
+- Разрушение защитных экранов радиаторов из ДСП.  
+- Вследствие протечки витражных конструкций перехода.  
+
+*При осмотре внутреннего помещения перехода были обнаружены множественные следы протечек по всей длине защитных экранов отопительных батарей.
+
+###### отменяет действие align-left и align-right
+
+### **Причины протечек**  
+При осмотре остекления перехода были выявлены следующие причины протечек и нарушения:
+
+![](/img/portfolio/20140530/20140530.97.png){:class="uk-align-left uk-width-1-2"}
+ 
+1.	Не плотное прилегание уплотнительной резины прижимной планки.   
+Резиновый уплотнитель утратил свои свойства: потерял эластичность, усох.   
+В итоге уплотнительная резина пропускает воду внутрь. 
+###### отменяет действие align-left и align-right
+
+#### **Уровень застоя воды**
+![](/img/portfolio/20140530/20140530.96.png){:class="uk-align-left uk-width-1-3"}
+ 
+2.	Отсутствие технологических зазоров для стока воды.   
+Технологические зазоры необходимы для беспрепятственного стока воды с поверхности конструкции.   
+Так как данные зазоры не были учтены, атмосферные осадки скапливаются в районе резиновых уплотнителей и при перепаде температур разрушают их.
+###### отменяет действие align-left и align-right
+ 
+3.	Отслоение герметизирующих составов.   
+Данное нарушение произошло из-за применения герметиков на силиконовой основе, не выдерживающих внешних атмосферных воздействий.    
+Использование данного вида герметизирующих составов приводит к отслоению или растрескиванию, так как применяемые герметизирующие составы должны выдерживать помимо атмосферных воздействий осадков и ультрафиолета температурные расширения конструкции остекления перехода.
+###### отменяет действие align-left и align-right
+#### **Разрушение штукатурного слоя**
+![](/img/portfolio/20140530/20140530.6.png){:class="uk-align-left uk-width-1-2"}
+ 
+**Комментарий:**   
+- Разрушение штукатурного слоя происходит из-за постоянного воздействия воды, текущей из профиля каркаса остекления перехода. 
+###### отменяет действие align-left и align-right
+4. Разрушение цементно-песчаной штукатурки внешних стен перехода.   
+Данное нарушение вызвано ошибкой проектировщика, который не учел особенности алюминиевого профиля конструкции остекления и не предусмотрел отвод воды из водоотводной канавки алюминиевого профиля конструкции остекления.   
+А также не был предусмотрен гидроизолирующий слой между кирпичной кладкой и алюминиевым профилем каркаса остекления.    
+Вся вода, попадающая внутрь профиля, стекает непосредственно на кирпичную кладку.   
+![](/img/portfolio/20140530/20140530.99.png){:class="uk-align-left uk-width-1-2"}
+ 
+- Также было выявлено нарушение выполнения проектной документации при строительно-монтажных работах в части отсутствия штукатурной сетки. 
+###### отменяет действие align-left и align-right
+5. Частичное разрушение декоративного софита на нижней наружной части перехода.   
+Разрушение было вызвано утерей несущей способности крепежа в результате атмосферных осадков.   
+Оставшаяся часть декоративного софита перехода находится в аварийном состоянии.  
+
+6. Разрушение защитных экранов радиаторов из ДСП произошло в результате протечек остекления перехода.
+
+#### **По результатам проведенного обследования:**   
+- было составлено техническое заключение, с выводами  
+- были разработаны и даны рекомендации по их устранению  
+- была составлена дефектная ведомость с объемом работ по ремонту  
+
+ 
