--- a/7.1.2.2_final_step.md
+++ b/7.1.2.2_final_step.md
@@ -18,4 +18,8 @@ layout: buffer
 
 
 #### Карта дефектов на кровле:
+![](/img/evk/KDK.001.png)
+![](/img/evk/KDK.002.png)
+![](/img/evk/KDK.003.png)
+![](/img/evk/KDK.004.png)
 ![](/img/evk/EVK.008.jpg)
