--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -22,11 +22,10 @@ submenu: true
  б) Система устройства эксплуатируемой крыши с тротуарами и пешеходными зонами.  
  в) Система неэксплуатируемой инверсионной крыши.  
  г) Система неэксплуатируемой балластной крыши.  
-
-
+  
+* Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})  
 * Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})  
-* Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})
-
+![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
 ## ***ВСТАВИТЬ ВИДЕО***
 
 ###### отменяет действие align-left и align-right
