--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -23,8 +23,8 @@ submenu: true
  в) Система неэксплуатируемой инверсионной крыши.  
  г) Система неэксплуатируемой балластной крыши.  
   
-* Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})  
-* Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})  
+* **Детектор протечек [Buckleys Wet Roof Pro’]({% link 7.1.2.3_Buckleys.md %})**  
+* **Завершающий этап проверки [(Карта дефектов на кровле)]({% link 7.1.2.2_final_step.md %})**  
 ![](/img/evk/KDK.001.png){:class="uk-align-left uk-width-1-2"}
 ## ***ВСТАВИТЬ ВИДЕО***
 
