--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -30,19 +30,19 @@ submenu: true
 
 ###### отменяет действие align-left и align-right
 ### **2. Нахождение мест протечек листовых и мягких кровель.**  
-![](/img/0/1.2.2.jpg)
+![](/img/0/1.2.2.jpg){:class="uk-align-left uk-width-1-2"}
 *    Визуальное обследование, нахождение причин протечек.   
 *    Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
 
 ###### отменяет действие align-left и align-right
 ### **3. Качество монтажа кровельных материалов.**  
-![](/img/0/1.2.3.6.jpg)  
+![](/img/0/1.2.3.6.jpg){:class="uk-align-left uk-width-1-2"}  
 
 ` ` Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
 ###### отменяет действие align-left и align-right
 ### **4. Определение мест утечки тепла.**  
-![](/img/0/1.2.4.jpg)     
+![](/img/0/1.2.4.jpg){:class="uk-align-left uk-width-1-2"}     
 
 ` ` Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
