--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -49,7 +49,7 @@ submenu: true
 ###### отменяет действие align-left и align-right
 ### **5. Опорные металлические конструкции.**  
 ![](/img/0/1.2.5.jpg)    
-` ` Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
+Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
 ` ` Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
