--- a/2.1_.md
+++ b/2.1_.md
@@ -5,6 +5,8 @@ sortid: 2.1
 submenu: true
 ---
 
+{% include el-slider.html  nimg = "5" %}  
+
 ` ` Опасным производственным фактором работ на высоте является расположение рабочего места на высоте от земли, пола или другой поверхности и связанная с этим возможность падения работника с высоты или падения предметов на работника.
 
 ###### отменяет действие align-left и align-right
@@ -24,11 +26,9 @@ submenu: true
 
 ` ` Работникам, допускаемым к работам без применения средств подмащивания, выполняемые на высоте 5 м и более, а также выполняемым на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м, по заданию работодателя на производство работ выдается оформленный на специальном бланке наряд-допуск на производство работ (далее - наряд-допуск), рекомендуемый образец которого предусмотрен приложением N 3 к Правилам.
 
-` ` **Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.**
+#### **Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.**
 
 ` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
 
 ***Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.*** 
 
-***ВСТАВИТЬ ИСТОРИЮ РАБОТ НА ВЫСОТЕ***  
-**ФОТО**
