--- a/2.1_.md
+++ b/2.1_.md
@@ -30,5 +30,5 @@ submenu: true
 
 ` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
 
-***Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.*** 
+#### ***Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.*** 
 
