--- a/2.2_.md
+++ b/2.2_.md
@@ -4,6 +4,7 @@ cat: 2
 sortid: 2.2
 submenu: true
 ---
+{% include el-slider.html  nimg = "5" %}
 
 ### **Что такое замкнутое пространство?**  
 Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
