--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -35,14 +35,17 @@ __Вид обследования:__
 
 
 ### **Что вам даст обследование фасада.**  
+![](/img/0/1.2.8.jpg){:class="uk-align-left uk-width-1-3"}  
 1. Достоверную информацию, на основании которой вы будете принимать решения.
 2. Заключение который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.
 3. Ценную информацию для формирования технического задания.
 4. Контроль выполненных работ. 
 5. Сверку проектной (исполнительной) документации с выполненными работами.
 6. Полученная информация поможет сэкономить ваш бюджет.
+###### отменяет действие align-left и align-right
 
 #### **Какие документы получаем по окончанию обследования.**  
+![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}  
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  
 * Техническое заключение составляется согласно __ГОСТ 31937-2011.__  
 * В которые входят данные осмотра, фото и видео материалы.  
@@ -50,10 +53,8 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * К заключению прилагаются рекомендации по устранению выявленных дефектов.  
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).
+###### отменяет действие align-left и align-right
 
 ___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
-
-
-
 
 
