--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -46,7 +46,7 @@ __Вид обследования:__
 
 #### **Какие документы получаем по окончанию обследования.**  
 ![](/img/0/1.2.9.jpg){:class="uk-align-left uk-width-1-3"}  
-__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  
+__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  который будет является доказательством, свидетельствующим о (наличии/отсутствии) интересующих фактических данных в разрешении того или иного вопроса.  
 * Техническое заключение составляется согласно __ГОСТ 31937-2011.__  
 * В которые входят данные осмотра, фото и видео материалы.  
 * В заключении будут отображены выявленные дефекты.   
