--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -54,6 +54,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).
 ###### отменяет действие align-left и align-right
+**техническое заключение формируется на основании технического задания.**
 
 ___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
 
