--- a/3.0_safety.md
+++ b/3.0_safety.md
@@ -19,9 +19,10 @@ layout: category
 - жесткие вертикальные анкерные линии 
 - анкерные точки 
 - анкерные столбы     
-Разработаны собственным конструкторским отделом HIGH SAFETY. Производятся из антистатичных материалов, что позволяет применять их во взрывоопасной среде. Анкерные линии рассчитаны на количество пользователей от 1-го до 7-и, в зависимости от типа устройства, анкерные точки - от 1-го до 3-х. Ассортимент анкерных линий, столбов и точек HIGH SAFETY позволяет организовать страховочную систему на любой рабочей площадке. Все анкерные линии испытаны по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="ГОСТ EN TS 16415-2015.pdf" %}  <!--  bufer6.3.1.md  --> "Средства индивидуальной защиты от падения с высоты. 
+***Разработаны собственным конструкторским отделом HIGH SAFETY***   
+Производятся из антистатичных материалов, что позволяет применять их во взрывоопасной среде. Анкерные линии рассчитаны на количество пользователей от 1-го до 7-и, в зависимости от типа устройства, анкерные точки - от 1-го до 3-х. Ассортимент анкерных линий, столбов и точек HIGH SAFETY позволяет организовать страховочную систему на любой рабочей площадке. Все анкерные линии испытаны по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="ГОСТ EN TS 16415-2015.pdf" %}  <!--  bufer6.3.1.md  --> "Средства индивидуальной защиты от падения с высоты. 
 
-#### Анкерные устройства для использования более чем одним человеком одновременно.
+#### **Анкерные устройства для использования более чем одним человеком одновременно**  
 1. Анкерная линия __[GALEREYA]({% link 3.1_GALEREYA.md %})__ \(Двухтросовая горизонтальная гибкая анкерная линия\)
 2. Анкерная линия __[GORIZONT]({% link 3.2_GORIZONT.md %})__ \(Горизонтальная гибкая анкерная линия\)
 3. Анкерная линия __[MOST]({% link 3.3_MOST.md %})__ \(Горизонтальная жесткая анкерная линия\)
@@ -29,9 +30,9 @@ layout: category
 5. Анкерная линия __[PEREPRAVA]({% link 3.5_PEREPRAVA.md %})__ \(Горизонтальная гибкая анкерная линия\)
 6. __[Анкерные столбы]({% link 3.6_anchor_posts.md %})__ \(Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности.\)
 
-                                            #### ***ФОТО ГАЛЛЕРЕЯ***
+{% include el-slider.html  nimg = "5" %}
 
-### Анкерные линии для обеспечения безопасной работы на высоте.
+### **Анкерные линии для обеспечения безопасной работы на высоте**
 
 **Анкерные линии** – это индивидуальное спасательное средство при проведении высотной работы. Они являются компонентом основной системы безопасности. Состоят из закрепленного на опоре каната, стального троса или металлоконструкции, к которым могут быть присоединены остальные компоненты соединительной системы.
 
@@ -42,12 +43,12 @@ layout: category
 •	ремонт и установка кровли;  
 •	спуск в колодец и другие виды промышленного альпинизма.  
 
-### Разновидности анкерных линий.  
+### **Разновидности анкерных линий**    
 **Анкерные линии** различаются по типу размещения несущей конструкции: они бывают вертикальными и горизонтальными. Есть еще гибкие и жесткие виды анкерных конструкций.  
 1.	**Гибкие линии** подразумевают использование стального троса в несущей части конструкции. Трос закрепляют анкерами. Его длина для вертикального и горизонтального закрепления должна составлять 10 или 12 метров соответственно. На несущий трос размещают привязи для работника. Дополняется система креплениями и амортизаторами.  
 2.	**Жесткие линии** оборудованы рельсом. Он может быть прямым или изогнутым, здесь все зависит от профиля поверхности, на которой будет крепиться страховочная система. По рельсу будут перемещаться страховочные тросы на креплениях, снабженные стопорами и элементами амортизации. 
 
-### Монтаж анкерных линий.  
+### **Монтаж анкерных линий**    
 Если Вы планируете **монтаж анкерных линий,** то прежде всего нужно определиться с их комплектацией. Помимо несущих тросов или рельс и страховочных частей в анкерных линиях должны присутствовать монтажные крепежные элементы и другие дополнительные устройства.
 
 **При расчете анкерной линии необходимо учитывать:**  
@@ -61,7 +62,7 @@ layout: category
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
 
 
-### ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!
+### **ВАША БЕЗОПАСНОСТЬ - НАША РАБОТА!**
 
 ***Наша компания проводит комплексное обеспечения предприятий стационарными анкерными линиями: оценка рисков и проектирование, продажа комплектующих, установка (наличие СРО), периодическая проверка, гарантийное обслуживание.***
 
