--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -4,7 +4,8 @@ cat: 3
 sortid: 3.3
 submenu: true
 ---
- 
+{% include el-slider.html  nimg = "5" %} 
+
 ### Наша компания является дилерами компании **HIGH SAFETY**
 ![](/img/toplogo/3.3.0.jpg){:class="uk-align-left uk-width-1-2"}
 
