--- a/3.5_PEREPRAVA.md
+++ b/3.5_PEREPRAVA.md
@@ -5,6 +5,7 @@ sortid: 3.5
 submenu: true
 ---
 
+{% include el-slider.html  nimg = "3" %} 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
 ![](/img/toplogo/3.5.0.jpg){:class="uk-align-left uk-width-1-2"}
