--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -5,6 +5,8 @@ sortid: 3.6
 submenu: true
 ---
 
+{% include el-slider.html  nimg = "3" %} 
+
 ### Наша компания является дилерами компании **HIGH SAFETY**
 ![](/img/toplogo/3.6.jpg){:class="uk-align-left uk-width-1-2"}
 
