--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -5,39 +5,63 @@ description: Причины обследования протечки внутр
 title: Обследование мягкой кровли таунхаус
 ---
 
-Отчет по результатам проведенной работы:
-на комплекс работ по обследованию мягкой кровли таунхаус на предмет выявления причин протечек.
- Объект расположен по адресу: Московская область, Одинцовский район. 
-Шифр проекта: 20191024.	
+![](/img/portfolio/20191024.png){:class="uk-align-left uk-width-1-2"}
 
-Причины обследования: протечки внутри дома во время ливневых дождей.
+### **Отчет по результатам проведенной работы:**
+**на комплекс работ по обследованию мягкой кровли таунхаус на предмет выявления причин протечек.
+Объект расположен по адресу: Московская область, Одинцовский район. 
+Шифр проекта: 20191024**	
 
-Техническое задание.
+#### **Причины обследования: протечки внутри дома во время ливневых дождей**
+###### отменяет действие align-left и align-right
+
+### **Техническое задание**
 1.	Обследование мягкую кровлю на предмет выявления нарушений герметичности кровельного покрытия и конструктивных элементов расположеных на кровле.
 2.	Составление отчета об обследовании с указанием причин протечек и способе их устронения.
 
-ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ
-- 1.	Организация безопастного доступа к месту проведения обследования.
-- 2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест и характера.
-- 3.	Сбор данных.
-- 4.	Анализ полученных результатов визуального обследования.
-- 5.	Составление заключения.
-
-При визуальном обследовании кровли были выявлены и зафиксированы дефекты, повреждения, нарушения:
+#### **ОРГАНИХАЦИЯ И ТЕХНОЛОГИЯ ПРОИЗВОДСТВА РАБОТ**
+1.	Организация безопастного доступа к месту проведения обследования.
+2.	Осмотр, выявление дефектов и повреждений, с фиксацией их мест и характера.
+3.	Сбор данных.
+4.	Анализ полученных результатов визуального обследования.
+5.	Составление технического заключения.
+ 
+#### **При визуальном обследовании кровли были выявлены и зафиксированы дефекты, повреждения, нарушения:**
+![](/img/portfolio/20191024/20191024.1.jpg){:class="uk-align-left uk-width-1-2"}
 1.	Повреждение конькового элемента.
-Фото
+
+  
+###### отменяет действие align-left и align-right
 
 2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
 
-Фото 6шт.
+![](/img/portfolio/20191024/20191024.2.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.3.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.4.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.5.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.6.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.7.png){:class="uk-align-left uk-width-1-3"}
+
+###### отменяет действие align-left и align-right
 
 3.	Не выполненная герметизация металлического отлива к облицовке фасада.
-Фото 2шт
+
+![](/img/portfolio/20191024/20191024.8.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.9.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.10.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.11.png){:class="uk-align-left uk-width-1-3"}
+   
+###### отменяет действие align-left и align-right
 
 4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
-Фото 3шт
 
-По результатам проведенного обследования: 
+![](/img/portfolio/20191024/20191024.12.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.13.png){:class="uk-align-left uk-width-1-3"}
+![](/img/portfolio/20191024/20191024.14.png){:class="uk-align-left uk-width-1-3"}
+  
+###### отменяет действие align-left и align-right
+
+#### **По результатам проведенного обследования:** 
 - был составлен отчет о причинах нарушений герметичности кровельного покрытия и конструктивных элементов.
 - были разработаны и даны рекомендации по их устранению.
 
