--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -5,7 +5,7 @@ description: Причины обследования протечки внутр
 title: Обследование мягкой кровли таунхаус
 ---
 
-![](/img/portfolio/20191024.png){:class="uk-align-left uk-width-1-2"}
+![](/img/portfolio/20191024.jpg){:class="uk-align-left uk-width-1-2"}
 
 ### **Отчет по результатам проведенной работы:**
 **на комплекс работ по обследованию мягкой кровли таунхаус на предмет выявления причин протечек.
