--- a/_portfolio/20191024.md
+++ b/_portfolio/20191024.md
@@ -28,12 +28,12 @@ title: Обследование мягкой кровли таунхаус
  
 #### **При визуальном обследовании кровли были выявлены и зафиксированы дефекты, повреждения, нарушения:**
 ![](/img/portfolio/20191024/20191024.1.jpg){:class="uk-align-left uk-width-1-2"}
-1.	Повреждение конькового элемента.
+#### 1.	Повреждение конькового элемента.
 
   
 ###### отменяет действие align-left и align-right
 
-2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
+#### 2.	Отсутствует герметичных примыканий соединения кровельного покрытия к внешним выходам вентиляционных труб.  
 
 ![](/img/portfolio/20191024/20191024.2.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.3.png){:class="uk-align-left uk-width-1-3"}
@@ -44,7 +44,7 @@ title: Обследование мягкой кровли таунхаус
 
 ###### отменяет действие align-left и align-right
 
-3.	Не выполненная герметизация металлического отлива к облицовке фасада.
+#### 3.	Не выполненная герметизация металлического отлива к облицовке фасада.
 
 ![](/img/portfolio/20191024/20191024.8.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.9.png){:class="uk-align-left uk-width-1-3"}
@@ -53,7 +53,7 @@ title: Обследование мягкой кровли таунхаус
    
 ###### отменяет действие align-left и align-right
 
-4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
+#### 4.	При обследовании чердачного помещения было обнаружено, что диффузионная мембрана частично срезана и вентиляционный продух герметично закрыт. Из-за этого отвод пара и конденсата не происходит. 
 
 ![](/img/portfolio/20191024/20191024.12.png){:class="uk-align-left uk-width-1-3"}
 ![](/img/portfolio/20191024/20191024.13.png){:class="uk-align-left uk-width-1-3"}
