--- a/1.4_Tech_conclus.md
+++ b/1.4_Tech_conclus.md
@@ -5,7 +5,7 @@ sortid: 1.4
 submenu: true
 ---
 
-` ` Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.
+Заключения, представляет собой комплекс работ по выявлению критических замечаний, достоверности указанной информации, представленных в исследовательской части, а также написания заключения и проверки полноты его содержания согласно требованиям.
 
 
 _По результатам обследования составляется отчет о техническом состоянии._  
